# hf2d-lab

./: CONTRIBUTING.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: ci.yml  deploy-pages.yml
engine-wasm/: Cargo.toml  LICENSE
engine-wasm/src/: lib.rs
src/: App.tsx  fft-js.d.ts  styles.css
src/components/: Diagnostics.tsx  Inspector.tsx  PresetRail.tsx  SimulationCanvas.test.ts  SimulationCanvas.tsx  TopBar.tsx
src/simulation/: config-state.test.ts  config-state.ts  discretization.test.ts  discretization.ts  fft2d.test.ts  fft2d.ts  field-views.test.ts  field-views.ts  pacing.test.ts  pacing.ts  physics.test.ts  physics.ts  presets.ts  reference-engine.test.ts  reference-engine.ts  schema.test.ts  schema.ts  session.test.ts  session.ts  simulation.worker.ts  types.ts  use-simulation.ts  wasm-kernel.ts  webgpu.test.ts  webgpu.ts
src/simulation/wasm/pkg/: hf2d_engine.d.ts  hf2d_engine.js  hf2d_engine_bg.wasm  hf2d_engine_bg.wasm.d.ts  package.json
